<resources>
    <string name="appName">Final Project V2</string>
    <string name="toLyricsActivity">To Lyrics Activity</string>
    <string name="toDeezerActivity">To Deezer Song Search Activity</string>
    <string name="toSoccerActivity">To Soccer Activity</string>
    <string name="toCityFinderActivity">To City Finder Activity</string>
    <string name="lyricsArtistNamePrompt">Artist: </string>
    <string name="lyricsArtistNameHint">Enter Artist Name </string>
    <string name="lyricsSongTitlePrompt">Song Title: </string>
    <string name="lyricsSongTitleHint">Enter Title Song </string>
    <string name="lyricsSearchButtonGoogle">Google Search</string>
    <string name="lyricsFragmentButton">HIDE</string>
    <string name="lyricsSavedFavourites">Saved Favourites</string>
    <string name="lyricsAuthor">Author: Yury Berestetsky</string>
    <string name="lyricsFavouritesSearch">"Search: "</string>
    <string name="lyricsSearchHint">Type here...</string>
    <string name="lyricsFavouritesSearchButton">GO</string>
    <string name="lyricsFavouritesSnackbarString">No search term entered. Showing whole list.</string>
    <string name="lyricsFavouritesDeleteQuestion">Do you want to delete this?</string>
    <string name="lyricsFavouritesDeleteArtist">"Artist: "</string>
    <string name="lyricsFavouritesDeleteSong">"Song: "</string>
    <string name="lyricsFavouritesDeleteYes">Yes</string>
    <string name="lyricsFavouritesDeleteNo">No</string>
    <string name="lyricsFavouritesHelpButton">Help</string>
    <string name="lyricsFavouritesInstructionsBody">
        \n- To find lyrics to a song, enter the artist and title and click SEARCH API
        \n- Click \'Save to Favourites\' to save the lyrics.
        \n- If \'Save to Favourites\' option is missing, then lyrics are already saved.
        \n- If lyrics can\'t be found in the API, you can try Google.
        \n- In \'Saved Favourites\', quickly click on a song in the list to see its lyrics.
        \n- Long click a saved favourite to delete it.</string>
    <string name="lyricsFavouritesInstructionsTitle">Instructions for this page:</string>
    <string name="lyricsFavouritesFoundOneSong">Found one song.</string>
    <string name="lyricsFavouritesFoundManySongs1">"Found "</string>
    <string name="lyricsFavouritesFoundManySongs2">" songs."</string>
    <string name="lyricsOpen">Open</string>
    <string name="lyricsClose">Close</string>
    <string name="lyricsFavouritesVersion">Version 1.0</string>
    <string name="lyricsAboutProject">This is the Song Lyrics activity, written by Yury Berestetsky</string>
    <string name="lyricsThankYou">Thank You</string>
    <string name="lyricsCancel">Cancel</string>
    <string name="lyricsFavouritesDonateTitle">Please give generou$ly</string>
    <string name="lyricsSaveToFavourites">Save to Favourites</string>
    <string name="lyricsOK">OK</string>
    <string name="lyricsActivityName">Song Lyrics Search</string>
    <string name="lyricsSearchButtonAPI">Search API</string>
    <string name="lyricsFavouritesSearchHint">Type here...</string>
    <string name="lyricsAboutProjectTitle">About Project</string>
    <string name="lyricsAboutAPI">About API</string>
    <string name="lyricsDonateTitle">Donate</string>
    <string name="lyricsDonateBody">How much would you like to donate?</string>
    <string name="lyricsDonateButton">Donate</string>
    <string name="lyricsNotFound">Lyrics not found.</string>

    <string name="app_name">Geo Data Source</string>
    <string name="citiesAuthor">Author: Sepideh Shahroudi</string>
    <string name="Author">Author: Sepideh Shahroudi</string>
    <string name="citiesFavouritesVersion">Version 1.0</string>
    <string name="latitudenumber">latitude</string>
    <string name="latitude">Enter latitude</string>
    <string name="longitudenumber">longitude</string>
    <string name="longitude">Enter longitude </string>
    <string name="citiesinformation">Information </string>

    <string name="countryname">country</string>
    <string name="Regionname">Region</string>
    <string name="cityname">city</string>
    <string name="currency">currency</string>
    <string name="searchbutton">Google map</string>
    <string name="favourite">Favourite Cities</string>
    <string name="type_here">Latitude and Longitude</string>
    <string name="favouritesDeleteLatitude">"Latitude: "</string>
    <string name="favouritesDeleteLongitude">"Longitude: "</string>
    <string name="citiesFragmentButton">HIDE</string>
    <string name="citiesFavouritesSearch">"Search: "</string>
    <string name="citiesSavedFavourites">Save Favourites</string>
    <string name="citiesSearchHint">Type here...</string>
    <string name="citiesFavouritesSearchButton">GO</string>
    <string name="citiesFavouritesSnackbarString">No search term entered. Showing whole list.</string>
    <string name="citiesFavouritesDeleteQuestion">Do you want to delete this?</string>
    <string name="citiesFavouritesDeleteYes">Yes</string>
    <string name="citiesFavouritesDeleteNo">No</string>
    <string name="citiesFavouritesHelpButton">Help</string>
    <string name="citiesFavouritesInstructionsTitle">Instructions for this page:</string>
    <string name="citiesFavouritesFoundOneItem">Found one Item.</string>
    <string name="citiesFavouritesFoundManyItems1">"Found "</string>
    <string name="citiesFavouritesFoundManyItems2">" Items."</string>
    <string name="citiesOpen">Open</string>
    <string name="citiesClose">Close</string>
    <string name="citiesAboutProject">This is the Geo Data Source activity, written by Sepideh Shahroudi</string>
    <string name="citiesThankYou">Thank You</string>
    <string name="citiesCancel">Cancel</string>
    <string name="citiesFavouritesDonateTitle">Please give generou$ly</string>
    <string name="citiesSaveToFavourites">Save to Favourites</string>
    <string name="citiesOK">OK</string>
    <string name="citiesActivityName">Geo Data Search</string>
    <string name="citiesSearchButtonAPI">Search API</string>
    <string name="citiesFavouritesSearchHint">Type here...</string>
    <string name="citiesAboutProjectTitle">About Project</string>
    <string name="citiesAboutAPI">About API</string>
    <string name="citiesDonateTitle">Donate</string>
    <string name="citiesDonateBody">How much would you like to donate?</string>
    <string name="citiesDonateButton">Donate</string>
    <string name="citiesNotFound">City not found.</string>

    <string name="city_open">Open</string>
    <string name="city_close">Close</string>
    <string name="city_help">Help</string>
    <string name="city_help_description">This is a city geo location application. It will search the cities nearby the specific latitude and longitude.</string>
    <string name="city_donate">Plesae donate</string>
    <string name="city_donate_message">how much do you want to donate?</string>
    <string name="city_thank_you">Thank you</string>
    <string name="city_cancel">Cancel</string>
    <string name="city_search_city">Search City</string>
    <string name="city_list_of_favorite_cities">List of Favorite Cities</string>
    <string name="city_detail">City Detail</string>
    <string name="city_ok">Ok</string>
    <string name="city_no_city_available">No City available</string>
    <string name="city_fav_cities">Favorite Cities</string>
    <string name="city_open_map_location">Open Map Location</string>
    <string name="city_cities">Cities</string>
    <string name="city_latitude">Latitude</string>
    <string name="city_longitude">Longitude</string>
    <string name="city_save_to_favourites">SAVE TO FAVOURITES</string>
    <string name="city_remove_from_favourites">REMOVE FROM FAVOURITES</string>
</resources>