<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/toCityFinderIcon"
        android:title="@string/toCityFinderActivity"
        android:icon="@drawable/city"
        android:orderInCategory="400"
        app:showAsAction="always"/>

    <item android:id="@+id/toSoccerIcon"
        android:icon="@drawable/soccer"
        android:title="@string/toSoccerActivity"
        app:showAsAction="always"
        android:orderInCategory="400"/> <!-- This uses showAsAction=never, so look at title= parameter -->

    <item android:id="@+id/toDeezerIcon"
        android:icon="@drawable/note"
        android:title="@string/toDeezerActivity"
        app:showAsAction="always"
        android:orderInCategory="400"/> <!-- This uses showAsAction=never, so look at title= parameter -->


    <item android:id="@+id/citiesaboutProject"
        android:title="@string/lyricsAboutProjectTitle"
        app:showAsAction="never"
        android:orderInCategory="400"/> <!-- This uses showAsAction=never, so look at title= parameter -->


</menu>