<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textSize="30dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/toLyricsMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toLyricsActivity"
        android:layout_below="@+id/app_name"/>

    <Button
        android:id="@+id/toSongAPI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toDeezerActivity"
        android:layout_below="@id/toLyricsMain"/>

    <Button
        android:id="@+id/toSoccer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toSoccerActivity"
        android:layout_below="@+id/toSongAPI"/>

    <Button
        android:id="@+id/toCityFinder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toCityFinderActivity"
        android:layout_below="@+id/toSoccer"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentBottom="true" />

</RelativeLayout>

