<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/citiesSavedFavourites"
                android:textSize="30dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Author"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/citiesAuthor"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_below="@id/pageTitle"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/citiesFavouritesVersion"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_below="@id/Author"/>


            <LinearLayout
                android:id="@+id/searchBar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/version">

                <TextView
                    android:id="@+id/searchPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/citiesFavouritesSearch"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/favouritesSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/lyricsFavouritesSearchHint"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/favouritesSearchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lyricsFavouritesSearchButton"/>

            </LinearLayout>

            <ListView
                android:id="@+id/myListView"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/searchBar" />

            <FrameLayout
                android:id="@+id/fragmentLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/searchBar" />

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/cities_favourites_header_layout"
            app:menu="@menu/lyrics_menu"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>
